--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
     "dependencies": {
         "redis" : "~0.10.1",
+        "hiredis" : ">=0.1.16",
         "lodash": ">=2.4.1",
         "node-uuid": ">=1.4.1",
         "buffertools" : ">= 2.1",
