--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
+    "name": "application-name",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "main" : "./index.js",
     "dependencies": {
         "redis" : "~0.10.1",
         "hiredis" : ">=0.1.16",
@@ -21,6 +22,5 @@
         "mocha" : ">= 1.18",
         "sinon" : ">= 1.9.1",
         "sinon-chai" : ">= 2.5.0"
-
     }
 }
