--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "sol-redis-pool": "~0.1.3",
         "async" : "*",
         "luamin" : ">=0.1.4",
-        "restify" : "~2.7.0"
+        "restify" : "~2.7.0",
+        "yargs" : ">=1.2.2"
     },
     "devDependencies": {
         "chai" : ">= 1.9.1",
